Fixed style issues

--- a/index.html
+++ b/index.html
@@ -763,9 +763,8 @@
           </div>
         </div>
       </div>
-      <div data-row-id="91a701da-4d6e-4639-8935-53f7a7b75a4c"
-        class="flexible-row l-91a701da-4d6e-4639-8935-53f7a7b75a4c">
-        <div class="container container-fluid flexible-row--91a701da-4d6e-4639-8935-53f7a7b75a4c region_12 ">
+      <div class="flexible-row">
+        <div class="container container-fluid">
           <div class="l-flexible-row row">
             <div class="l-col col-md-12 l-region--content">
               <!-- BEGIN JAXTODAY EMBED -->
