--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -768,7 +768,28 @@
           <div class="l-flexible-row row">
             <div class="l-col col-md-12 l-region--content">
               <!-- BEGIN JAXTODAY EMBED -->
-              <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://jaxtoday.org/jacksonville-today-embed/' style='border:0'></iframe></div>
+              <style>
+                .embed-container {
+                  position: relative;
+                  padding-bottom: 56.25%;
+                  height: 0;
+                  overflow: hidden;
+                  max-width: 100%;
+                }
+
+                .embed-container iframe,
+                .embed-container object,
+                .embed-container embed {
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                }
+              </style>
+              <div class='embed-container'>
+                <iframe src='https://jaxtoday.org/jacksonville-today-embed/' style='border:0'></iframe>
+              </div>
               <!-- END JAXTODAY EMBED -->
             </div>
           </div>
