Updated and minified

--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
             <div class="l-col col-md-12 l-region--content">
               <!-- BEGIN JAXTODAY EMBED -->
               <style>
-                .embed-container {
+                .jt-embed-container {
                   position: relative;
                   padding-bottom: 56.25%;
                   /* 16:9 Aspect Ratio */
@@ -778,9 +778,7 @@
                   max-width: 100%;
                 }
 
-                .embed-container iframe,
-                .embed-container object,
-                .embed-container embed {
+                .jt-embed-container iframe {
                   position: absolute;
                   top: 0;
                   left: 0;
@@ -797,18 +795,18 @@
 
                 /* CSS Media Queries */
                 @media (max-width: 1200px) {
-                  .embed-container {
+                  .jt-embed-container {
                     min-height: 1080px;
                   }
                 }
 
                 @media (max-width: 992px) {
-                  .embed-container {
+                  .jt-embed-container {
                     min-height: 1600px;
                   }
                 }
               </style>
-              <div class='embed-container'>
+              <div class='jt-embed-container'>
                 <iframe src='https://jaxtoday.org/jacksonville-today-embed/' style='border:0'></iframe>
               </div>
               <!-- END JAXTODAY EMBED -->
