--- a/jaxtoday-embed.html
+++ b/jaxtoday-embed.html
@@ -1,1 +1,31 @@
-<style>.jt-embed-container{ position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;} .jt-embed-container iframe{ position: absolute; top: 0; left: 0; width: 100%; height: 100%;} @media (max-width: 1200px){ .jt-embed-container{ min-height: 1080px;}} @media (max-width: 992px){ .jt-embed-container{ min-height: 1600px;}}</style><div class='jt-embed-container'><iframe src='https://jaxtoday.org/jacksonville-today-embed/' style='border:0'></iframe></div>
+<style>
+  .jt-embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+  }
+
+  .jt-embed-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  @media (max-width: 1200px) {
+    .jt-embed-container {
+      min-height: 1080px;
+    }
+  }
+
+  @media (max-width: 992px) {
+    .jt-embed-container {
+      min-height: 1600px;
+    }
+  }
+</style>
+<div class='jt-embed-container'><iframe src='https://jaxtoday.org/jacksonville-today-embed/' style='border:0'></iframe>
+</div>
